Modify elser, migration notebook to pass testing script

--- a/notebooks/search/03-ELSER.ipynb
+++ b/notebooks/search/03-ELSER.ipynb
@@ -64,16 +64,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 96,
    "metadata": {
     "id": "uP_GTVRi-d96"
    },
    "outputs": [],
    "source": [
-    "from elasticsearch import Elasticsearch, helpers\n",
+    "from elasticsearch import Elasticsearch, helpers, exceptions\n",
     "from urllib.request import urlopen\n",
     "import getpass\n",
-    "import json"
+    "import json\n",
+    "import time"
    ]
   },
   {
@@ -91,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 179,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -126,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 173,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -139,7 +140,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'name': 'instance-0000000001', 'cluster_name': 'cfdd4b889b2548928bbfb1103e887f40', 'cluster_uuid': '9W4B3wPmQ8WGcl0eKN39uA', 'version': {'number': '8.11.0', 'build_flavor': 'default', 'build_type': 'docker', 'build_hash': '454cd35d33aafc161b4f7238d63777e71814d834', 'build_date': '2023-10-16T22:04:47.763088486Z', 'build_snapshot': False, 'lucene_version': '9.8.0', 'minimum_wire_compatibility_version': '7.17.0', 'minimum_index_compatibility_version': '7.0.0'}, 'tagline': 'You Know, for Search'}\n"
+      "{'name': 'instance-0000000000', 'cluster_name': '591083df1d524a0eb0299c617d5a093f', 'cluster_uuid': 'pwoEM8ElQoCMGgfKLAkgVQ', 'version': {'number': '8.10.0', 'build_flavor': 'default', 'build_type': 'docker', 'build_hash': 'e338da74c79465dfdc204971e600342b0aa87b6b', 'build_date': '2023-09-07T08:16:21.960703010Z', 'build_snapshot': False, 'lucene_version': '9.7.0', 'minimum_wire_compatibility_version': '7.17.0', 'minimum_index_compatibility_version': '7.0.0'}, 'tagline': 'You Know, for Search'}\n"
      ]
     }
    ],
@@ -170,17 +171,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 180,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model doesn't exist, but We will proceed with creating one\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "ObjectApiResponse({'model_id': '.elser_model_2', 'model_type': 'pytorch', 'model_package': {'packaged_model_id': 'elser_model_2', 'model_repository': 'https://ml-models.elastic.co', 'minimum_version': '11.0.0', 'size': 438123914, 'sha256': '2e0450a1c598221a919917cbb05d8672aed6c613c028008fedcd696462c81af0', 'metadata': {}, 'tags': [], 'vocabulary_file': 'elser_model_2.vocab.json'}, 'created_by': 'api_user', 'version': '11.0.0', 'create_time': 1698438246925, 'model_size_bytes': 0, 'estimated_operations': 0, 'license_level': 'platinum', 'description': 'Elastic Learned Sparse EncodeR v2', 'tags': ['elastic'], 'metadata': {}, 'input': {'field_names': ['text_field']}, 'inference_config': {'text_expansion': {'vocabulary': {'index': '.ml-inference-native-000002'}, 'tokenization': {'bert': {'do_lower_case': True, 'with_special_tokens': True, 'max_sequence_length': 512, 'truncate': 'first', 'span': -1}}}}, 'location': {'index': {'name': '.ml-inference-native-000002'}}})"
+      ]
+     },
+     "execution_count": 180,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Creates the ELSER model configuration. Automatically downloads the model if it doesn't exist.\n",
+    "# delete model if already downloaded and deployed\n",
+    "try:\n",
+    "  client.ml.delete_trained_model(model_id=\".elser_model_2\",force=True)\n",
+    "  print(\"Model deleted successfully, We will proceed with creating one\")\n",
+    "except exceptions.NotFoundError:\n",
+    "  print(\"Model doesn't exist, but We will proceed with creating one\")\n",
+    "\n",
+    "# Creates the ELSER model configuration. Automatically downloads the model if it doesn't exist. \n",
     "client.ml.put_trained_model(\n",
-    "  model_id=\".elser_model_2\",\n",
-    "  input={\n",
-    "    \"field_names\": [\"text_field\"]\n",
-    "  }\n",
-    ")"
+    "    model_id=\".elser_model_2\",\n",
+    "    input={\n",
+    "      \"field_names\": [\"text_field\"]\n",
+    "    }\n",
+    "  )\n"
    ]
   },
   {
@@ -192,27 +218,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "ELSER Model is downloaded but not ready to be deployed.\n",
+      "ELSER Model is downloaded but not ready to be deployed.\n",
+      "ELSER Model is downloaded but not ready to be deployed.\n",
+      "ELSER Model is downloaded but not ready to be deployed.\n",
+      "ELSER Model is downloaded but not ready to be deployed.\n",
       "ELSER Model is downloaded and ready to be deployed.\n"
      ]
     }
    ],
    "source": [
-    "status = client.ml.get_trained_models(\n",
-    "  model_id=\".elser_model_2\",\n",
-    "  include=\"definition_status\"\n",
-    ")\n",
-    "\n",
-    "if (status[\"trained_model_configs\"][0][\"fully_defined\"]):\n",
-    "  print(\"ELSER Model is downloaded and ready to be deployed.\")\n",
-    "else:\n",
-    "  print(\"ELSER Model is downloaded but not ready to be deployed.\")\n"
+    "while True:\n",
+    "    status = client.ml.get_trained_models(\n",
+    "        model_id=\".elser_model_2\",\n",
+    "        include=\"definition_status\"\n",
+    "    )\n",
+    "    \n",
+    "    if (status[\"trained_model_configs\"][0][\"fully_defined\"]):\n",
+    "        print(\"ELSER Model is downloaded and ready to be deployed.\")\n",
+    "        break\n",
+    "    else:\n",
+    "        print(\"ELSER Model is downloaded but not ready to be deployed.\")\n",
+    "    time.sleep(5)"
    ]
   },
   {
@@ -228,11 +262,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Start trained model deployment\n",
+    "# Start trained model deployment if not already deployed\n",
     "client.ml.start_trained_model_deployment(\n",
     "  model_id=\".elser_model_2\",\n",
-    "  number_of_allocations=1,\n",
-    ")"
+    "  number_of_allocations=1\n",
+    ")\n"
    ]
   },
   {
@@ -257,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -265,18 +299,7 @@
     "id": "XhRng99KLQsd",
     "outputId": "00ea73b5-45a4-472b-f4bc-2c2c790ab94d"
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "ObjectApiResponse({'acknowledged': True})"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "client.ingest.put_pipeline(\n",
     "    id=\"elser-ingest-pipeline\", \n",
@@ -331,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 162,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -346,12 +369,13 @@
        "ObjectApiResponse({'acknowledged': True, 'shards_acknowledged': True, 'index': 'elser-example-movies'})"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "client.indices.delete(index=\"elser-example-movies\", ignore_unavailable=True)\n",
     "client.indices.create(\n",
     "  index=\"elser-example-movies\",\n",
     "  settings={\n",
@@ -395,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 163,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -430,7 +454,8 @@
     "# Use helpers.bulk to index\n",
     "helpers.bulk(client, documents)\n",
     "\n",
-    "print(\"Done indexing documents into `elser-example-movies` index!\")"
+    "print(\"Done indexing documents into `elser-example-movies` index!\")\n",
+    "time.sleep(3)"
    ]
   },
   {
@@ -462,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 164,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
