--- a/notebooks/generative-ai/question-answering.ipynb
+++ b/notebooks/generative-ai/question-answering.ipynb
@@ -69,7 +69,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 54,
       "metadata": {
         "id": "a-t1mglib54F"
       },
@@ -110,7 +110,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 55,
       "metadata": {
         "id": "J8-93TiJsNyK"
       },
@@ -148,7 +148,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 56,
       "metadata": {
         "id": "dbHEoTF6vBXE"
       },
@@ -203,12 +203,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 58,
       "metadata": {},
       "outputs": [],
       "source": [
         "documents = vector_store.from_documents(\n",
-        "    docs, embeddings, es_url=\"http://localhost:9200\", index_name=\"workplace_index\"\n",
+        "    docs, \n",
+        "    embeddings,  \n",
+        "    index_name=\"workplace_index\",\n",
+        "    es_cloud_id=CLOUD_ID,\n",
+        "    es_user=CLOUD_USERNAME,\n",
+        "    es_password=CLOUD_PASSWORD\n",
         ")"
       ]
     },
