updates to example

--- a/notebooks/generative-ai/question-answering.ipynb
+++ b/notebooks/generative-ai/question-answering.ipynb
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 1,
       "metadata": {
         "id": "33A-cP-XvFCr"
       },
@@ -47,7 +47,7 @@
         }
       ],
       "source": [
-        "!python3 -m pip install -qU langchain openai elasticsearch tiktoken jq"
+        "!python3 -m pip install -qU langchain openai==0.28.1 elasticsearch tiktoken jq"
       ]
     },
     {
@@ -69,7 +69,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 2,
       "metadata": {
         "id": "a-t1mglib54F"
       },
@@ -110,7 +110,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": 3,
       "metadata": {
         "id": "J8-93TiJsNyK"
       },
@@ -126,7 +126,7 @@
         "response = urlopen(url)\n",
         "data = json.load(response)\n",
         "\n",
-        "with open('data.json', 'w') as json_file:\n",
+        "with open('temp.json', 'w') as json_file:\n",
         "    json.dump(data, json_file)\n"
       ]
     },
@@ -148,7 +148,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": 4,
       "metadata": {
         "id": "dbHEoTF6vBXE"
       },
@@ -177,7 +177,7 @@
         "# For more loaders https://python.langchain.com/docs/modules/data_connection/document_loaders/\n",
         "# And 3rd party loaders https://python.langchain.com/docs/modules/data_connection/document_loaders/#third-party-loaders\n",
         "loader = JSONLoader(\n",
-        "        file_path=\"data.json\",\n",
+        "        file_path=\"temp.json\",\n",
         "        jq_schema=\".[]\",\n",
         "        content_key=\"content\",\n",
         "        metadata_func=metadata_func,\n",
@@ -194,7 +194,7 @@
         "id": "RmCUl0hxW4lG"
       },
       "source": [
-        "### Bulk Import Passages into Elasticsearch\n",
+        "### Bulk Import Passages\n",
         "\n",
         "Now that we have split each document into the chunk size of 800, we will now index data to elasticsearch using [ElasticsearchStore.from_documents](https://api.python.langchain.com/en/latest/vectorstores/langchain.vectorstores.elasticsearch.ElasticsearchStore.html#langchain.vectorstores.elasticsearch.ElasticsearchStore.from_documents).\n",
         "\n",
@@ -203,7 +203,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 63,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -230,7 +230,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -245,7 +245,7 @@
           "text": [
             "---- Answer ----\n",
             "\n",
-            "The North America South America (NASA) region sales team consists of dedicated account managers, sales representatives, and support staff, led by their respective Area Vice-Presidents Laura Martinez and Gary Johnson.\n"
+            "The North America South America (NASA) sales team is led by two Area Vice-Presidents: Laura Martinez, the Area Vice-President of North America, and Gary Johnson, the Area Vice-President of South America. The team consists of dedicated account managers, sales representatives, and support staff.\n"
           ]
         }
       ],
@@ -291,7 +291,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -300,8 +300,7 @@
           "text": [
             "---- Answer ----\n",
             "\n",
-            "Answer: The NASA Sales Team is the North America South America Region (NASA) sales team. This team is led by two Area Vice-Presidents: Laura Martinez is the Area Vice-President of North America, and Gary Johnson is the Area Vice-President of South America. \n",
-            "\n",
+            "Answer: The North America South America (NASA) sales team is led by two Area Vice-Presidents: Laura Martinez is the Area Vice-President of North America, and Gary Johnson is the Area Vice-President of South America. The team consists of dedicated account managers, sales representatives, and support staff. They are responsible for identifying and pursuing new business opportunities, nurturing existing client relationships, and ensuring customer satisfaction. \n",
             "Source: Sales Organization Overview\n"
           ]
         }
@@ -314,26 +313,24 @@
         "\n",
         "retriever = vector_store.as_retriever()\n",
         "\n",
-        "llm = OpenAI(openai_api_key=OPENAI_API_KEY)\n",
+        "llm = OpenAI(openai_api_key=OPENAI_API_KEY, verbose=True)\n",
         "\n",
         "ANSWER_PROMPT = ChatPromptTemplate.from_template(\n",
         "\"\"\"\n",
         "Use the following passages to answer the user's question.\n",
-        "Each passage has a SOURCE which is the title of the document. When answering, cite source name of the passages you are answering from below the answer in a unique bullet point list.\n",
+        "Each passage has a SOURCE which is the title of the document. When answering, cite source name of the passages you are answering from below the answer.\n",
         "\n",
         "If you don't know the answer, just say that you don't know, don't try to make up an answer.\n",
         "\n",
-        "----\n",
         "{context}\n",
-        "----\n",
+        "\n",
         "Question: {question}\n",
         "\"\"\"\n",
         ")\n",
         "\n",
         "DOCUMENT_PROMPT = PromptTemplate.from_template(\"\"\"\n",
         "---\n",
-        "NAME: {name}\n",
-        "PASSAGE:\n",
+        "SOURCE: {name}\n",
         "{page_content}\n",
         "---\n",
         "\"\"\")\n",
@@ -373,7 +370,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -382,9 +379,9 @@
           "text": [
             "---- Answer ----\n",
             "\n",
-            "Answer: The North America South America (NASA) sales team is responsible for identifying and pursuing new business opportunities, nurturing existing client relationships, and ensuring customer satisfaction in North America and South America. This team is led by two Area Vice-Presidents: Laura Martinez is the Area Vice-President of North America, and Gary Johnson is the Area Vice-President of South America. \n",
+            "The NASA sales team is led by two Area Vice-Presidents: Laura Martinez is the Area Vice-President of North America, and Gary Johnson is the Area Vice-President of South America. The team consists of dedicated account managers, sales representatives, and support staff responsible for identifying and pursuing new business opportunities, nurturing existing client relationships, and ensuring customer satisfaction. They collaborate closely with other departments, such as marketing, product development, and customer support, to ensure we consistently deliver high-quality products and services to our clients.\n",
             "\n",
-            "SOURCE: Sales Organization Overview\n",
+            "Source: Sales Organization Overview\n",
             "\n",
             "---- Documents ----\n",
             "Sales Organization Overview\n",
@@ -393,20 +390,15 @@
             "The Americas: This region includes the United States, Canada, Mexico, as well as Central and South America. The North America South America region (NASA) has two Area Vice-Presidents: Laura Martinez is the Area Vice-President of North America, and Gary Johnson is the Area Vice-President of South America.\n",
             "----\n",
             "Sales Organization Overview\n",
+            "Our sales organization is structured to effectively serve our customers and achieve our business objectives across multiple regions. The organization is divided into the following main regions:\n",
+            "\n",
+            "The Americas: This region includes the United States, Canada, Mexico, as well as Central and South America. The North America South America region (NASA) has two Area Vice-Presidents: Laura Martinez is the Area Vice-President of North America, and Gary Johnson is the Area Vice-President of South America.\n",
+            "----\n",
+            "Sales Organization Overview\n",
             "Each regional sales team consists of dedicated account managers, sales representatives, and support staff, led by their respective Area Vice-Presidents. They are responsible for identifying and pursuing new business opportunities, nurturing existing client relationships, and ensuring customer satisfaction. The teams collaborate closely with other departments, such as marketing, product development, and customer support, to ensure we consistently deliver high-quality products and services to our clients.\n",
             "----\n",
-            "Sales Engineering Collaboration\n",
-            "Title: Working with the Sales Team as an Engineer in a Tech Company\n",
-            "\n",
-            "Introduction:\n",
-            "As an engineer in a tech company, collaboration with the sales team is essential to ensure the success of the company's products and services. This guidance document aims to provide an overview of how engineers can effectively work with the sales team, fostering a positive and productive working environment.\n",
-            "Understanding the Sales Team's Role:\n",
-            "The sales team is responsible for promoting and selling the company's products and services to potential clients. Their role involves establishing relationships with customers, understanding their needs, and ensuring that the offered solutions align with their requirements.\n",
-            "----\n",
-            "Sales Engineering Collaboration\n",
-            "As an engineer, it is important to understand the sales team's goals and objectives, as this will help you to provide them with the necessary information, tools, and support to successfully sell your company's products and services.\n",
-            "Communication:\n",
-            "Effective communication is key to successfully working with the sales team. Make sure to maintain open lines of communication, and be responsive to their questions and concerns. This includes:\n",
+            "Sales Organization Overview\n",
+            "Each regional sales team consists of dedicated account managers, sales representatives, and support staff, led by their respective Area Vice-Presidents. They are responsible for identifying and pursuing new business opportunities, nurturing existing client relationships, and ensuring customer satisfaction. The teams collaborate closely with other departments, such as marketing, product development, and customer support, to ensure we consistently deliver high-quality products and services to our clients.\n",
             "----\n"
           ]
         }
@@ -424,21 +416,20 @@
         "ANSWER_PROMPT = ChatPromptTemplate.from_template(\n",
         "\"\"\"\n",
         "Use the following passages to answer the user's question.\n",
-        "Each passage has a SOURCE which is the title of the document. When answering, cite source name of the passages you are answering from below the answer in a unique bullet point list.\n",
+        "Each passage has a SOURCE which is the title of the document. When answering, cite source name of the passages you are answering from below the answer.\n",
         "\n",
         "If you don't know the answer, just say that you don't know, don't try to make up an answer.\n",
         "\n",
-        "----\n",
         "{context}\n",
-        "----\n",
+        "\n",
         "Question: {question}\n",
+        "\n",
         "\"\"\"\n",
         ")\n",
         "\n",
         "DOCUMENT_PROMPT = PromptTemplate.from_template(\"\"\"\n",
         "---\n",
-        "NAME: {name}\n",
-        "PASSAGE:\n",
+        "SOURCE: {name}\n",
         "{page_content}\n",
         "---\n",
         "\"\"\")\n",
@@ -492,7 +483,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
@@ -501,12 +492,8 @@
           "text": [
             "---- Answer ----\n",
             "\n",
-            "Answer: \n",
-            "The objectives for Fiscal Year 2024 are: \n",
-            "- Increase revenue by 20% compared to fiscal year 2023 (SOURCE: Executive Summary).\n",
-            "- Expand market share in key segments by 15% (SOURCE: Executive Summary).\n",
-            "- Retain 95% of existing customers and increase customer satisfaction ratings (SOURCE: Executive Summary).\n",
-            "- Launch at least two new products or services in high-demand market segments (SOURCE: Executive Summary).\n"
+            "Answer: The objectives for Fiscal Year 2024 are to increase revenue by 20% compared to fiscal year 2023, expand market share in key segments by 15%, retain 95% of existing customers and increase customer satisfaction ratings, and launch at least two new products or services in high-demand market segments.\n",
+            "Source: Fy2024 Company Sales Strategy\n"
           ]
         }
       ],
@@ -523,21 +510,19 @@
         "ANSWER_PROMPT = ChatPromptTemplate.from_template(\n",
         "\"\"\"\n",
         "Use the following passages to answer the user's question.\n",
-        "Each passage has a SOURCE which is the title of the document. When answering, cite source name of the passages you are answering from below the answer in a unique bullet point list.\n",
+        "Each passage has a SOURCE which is the title of the document. When answering, cite source name of the passages you are answering from below the answer.\n",
         "\n",
         "If you don't know the answer, just say that you don't know, don't try to make up an answer.\n",
         "\n",
-        "----\n",
         "{context}\n",
-        "----\n",
+        "\n",
         "Question: {question}\n",
         "\"\"\"\n",
         ")\n",
         "\n",
         "DOCUMENT_PROMPT = PromptTemplate.from_template(\"\"\"\n",
         "---\n",
-        "NAME: {name}\n",
-        "PASSAGE:\n",
+        "SOURCE: {name}\n",
         "{page_content}\n",
         "---\n",
         "\"\"\")\n",
@@ -548,7 +533,6 @@
         "Chat History:\n",
         "{chat_history}\n",
         "Follow Up Input: {question}\n",
-        "Standalone question:\n",
         "\"\"\")\n",
         "\n",
         "standalone_question = RunnableMap(\n",
@@ -599,7 +583,8 @@
         "    \"What is the nasa sales team?\",\n",
         "    \"The sales team of NASA consists of Laura Martinez, the Area \"\n",
         "    \"Vice-President of North America, and Gary Johnson, the Area \"\n",
-        "    \"Vice-President of South America. (Sales Organization Overview)\",\n",
+        "    \"Vice-President of South America.\"\n",
+        "    \"SOURCE: Sales Organization Overview\"\n",
         "  ]\n",
         "})\n",
         "\n",
